--- a/OpticalMarkRecognition/pom.xml
+++ b/OpticalMarkRecognition/pom.xml
@@ -18,6 +18,7 @@
   			<includes>
   				<include>*.png</include>
   				<include>*.gif</include>
+  				<include>*.jpg</include>
   				<include>*.pdf</include>
   				<include>*.fields</include>
   			</includes>
