--- a/OpticalMarkRecognition/pom.xml
+++ b/OpticalMarkRecognition/pom.xml
@@ -67,7 +67,7 @@
      <dependency>
      	<groupId>com.google.zxing</groupId>
      	<artifactId>clientjavase</artifactId>
-     	<version>0.0.1-SNAPSHOT</version>
+     	<version>0.0.1</version>
      	<scope>compile</scope>
      </dependency>
      <dependency>
