--- a/OpticalMarkRecognition/trunk/pom.xml
+++ b/OpticalMarkRecognition/trunk/pom.xml
@@ -63,6 +63,7 @@
      	<groupId>com.google.zxing</groupId>
      	<artifactId>clientjavase</artifactId>
      	<version>0.0.1</version>
+     	<scope>compile</scope>
      </dependency>
      <dependency>
      	<groupId>junit</groupId>
