--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,24 @@
   				
   			</configuration>
   		</plugin>
+  		
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-dependency-plugin</artifactId>
+  			<version>2.1</version>
+  			<executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+            <outputDirectory>target</outputDirectory></configuration>
+            </execution>
+            </executions> 
+  			
+  		</plugin>
   	</plugins>
   	<extensions>
   	</extensions>
