OMR processing should accept directories for OMR files Now directory and zip file is supported for templates. NEW-#38 http://itastdevserver.tel.uva.es/proyectos/moodle-projects/ticket/38

--- a/OpticalMarkRecognition/trunk/pom.xml
+++ b/OpticalMarkRecognition/trunk/pom.xml
@@ -21,6 +21,7 @@
   				<include>*.jpg</include>
   				<include>*.pdf</include>
   				<include>*.fields</include>
+  				<include>*.zip</include>
   			</includes>
   		</testResource>
   	</testResources>
