--- a/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
+++ b/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.rootLogger=info, stdout
-log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=debug, stdout
+log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error, stdout
+log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=error, stdout
 log4j.logger.org.uva.itast.blended.omr.scanners=debug, stdout
 log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=debug, stdout
