--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>PFC_OpticalMarkRecognition</groupId>
-	<artifactId>PFC_OpticalMarkRecognition</artifactId>
+	<groupId>org.uva.eduvalab</groupId>
+	<artifactId>OpticalMarkRecognition</artifactId>
 	<name>Blended OMR</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.5.0-SNAPSHOT</version>
 	<description>Optical Mark Recognition for Moodle Blended elearning</description>
 	<organization>
 		<name>ITAST Group (University of Valladolid)</name>
@@ -43,26 +44,80 @@
 					<!-- forkMode>pertest</forkMode -->
 					<argLine>-Xmx128m</argLine>
 					<testFailureIgnore>false</testFailureIgnore>
-					<skip>false</skip>
+
 				</configuration>
 			</plugin>
+			<!-- Define install-dir mvn -Dinstall-dir=directory install -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.1</version>
+				<version>2.0</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
-						<phase>package</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>target</outputDirectory>
+							<outputDirectory>${install-dir}/${artifactId}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.uva.itast.blended.omr.OmrCommand</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib</classpathPrefix>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<executions>
+					<execution>
+						<id>copy-jar</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${install-dir}/${artifactId}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${build.directory}</directory>
+									<includes>
+										<include>${build.finalName}.jar</include>
+									</includes>
+								</resource>
+								<resource>
+									<directory>${project.basedir}/src/main/resources</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/binaryPackage.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
+
 		</plugins>
 		<extensions>
 		</extensions>
@@ -108,5 +163,8 @@
 	</scm>
 	<distributionManagement>
 	</distributionManagement>
+	<properties>
+		<install-dir>target/install</install-dir>
+	</properties>
 
 </project>
