--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,9 @@ log4j.appender.stdout.layout.ConversionPattern=%5p-%m%n
 log4j.rootLogger=info, stdout
 
 log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error, stdout
-log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=error, stdout
+log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=debug, stdout
 log4j.logger.org.uva.itast.blended.omr.scanners=error, stdout
 log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error, stdout
 log4j.logger.org.uva.itast.blended.omr.pages=debug, stdout
+log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=error, stdout
 log4j.additivity.org.uva.itast.blended.omr.pages=false
