--- a/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
+++ b/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
@@ -4,12 +4,12 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 ##log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%5p-%m%n
-log4j.rootLogger=info, stdout
+log4j.rootLogger=debug, stdout
 
-log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error, stdout
+log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=debug, stdout
 log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.scanners=error, stdout
-log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error, stdout
+log4j.logger.org.uva.itast.blended.omr.scanners=debug, stdout
+log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=debug, stdout
 log4j.logger.org.uva.itast.blended.omr.pages=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=error, stdout
+log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=debug, stdout
 log4j.additivity.org.uva.itast.blended.omr.pages=false
