--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,10 +6,11 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p-%m%n
 log4j.rootLogger=debug, stdout
 
-log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.SolidCircleMark=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.scanners=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.pages=debug, stdout
-log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=debug, stdout
+log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error
+log4j.logger.org.uva.itast.blended.omr.scanners.SolidCircleMarkScanner=debug
+log4j.logger.org.uva.itast.blended.omr.scanners=debug
+log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error
+log4j.logger.org.uva.itast.blended.omr.pages=debug
+log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=debug
+log4j.logger.org.uva.itast.blended.omr.scanners.LineHoughAlgorithm=error
 log4j.additivity.org.uva.itast.blended.omr.pages=false
