--- a/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
+++ b/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
@@ -7,10 +7,11 @@ log4j.appender.stdout.layout.ConversionPattern=%5p-%m%n
 log4j.rootLogger=debug, stdout
 
 log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error
-log4j.logger.org.uva.itast.blended.omr.scanners.SolidCircleMarkScanner=debug
+log4j.logger.org.uva.itast.blended.omr.scanners.SolidCircleMarkScanner=error
+log4j.logger.org.uva.itast.blended.omr.scanners.SolidSquareMarkScanner=error
 log4j.logger.org.uva.itast.blended.omr.scanners=debug
 log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error
-log4j.logger.org.uva.itast.blended.omr.pages=debug
+log4j.logger.org.uva.itast.blended.omr.pages=error
 log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=debug
 log4j.logger.org.uva.itast.blended.omr.scanners.LineHoughAlgorithm=error
 log4j.additivity.org.uva.itast.blended.omr.pages=true
