Improved alignment algorithm (more ill cases covered) Bug when reporting multipage scans

--- a/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
+++ b/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
@@ -4,14 +4,15 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 ##log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%5p-%m%n
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
 
-log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error
-log4j.logger.org.uva.itast.blended.omr.scanners.SolidCircleMarkScanner=error
-log4j.logger.org.uva.itast.blended.omr.scanners.SolidSquareMarkScanner=error
-log4j.logger.org.uva.itast.blended.omr.scanners=debug
-log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error
-log4j.logger.org.uva.itast.blended.omr.pages=error
-log4j.logger.org.uva.itast.blended.omr.pages.AbstractAlignMarkDetector=debug
-log4j.logger.org.uva.itast.blended.omr.scanners.LineHoughAlgorithm=error
+##log4j.logger.org.uva.itast.blended.omr.BarcodeManipulation=error
+##log4j.logger.org.uva.itast.blended.omr.scanners.SolidCircleMarkScanner=error
+##log4j.logger.org.uva.itast.blended.omr.scanners.SolidSquareMarkScanner=error
+##log4j.logger.org.uva.itast.blended.omr.scanners=error
+##log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error
+##log4j.logger.org.uva.itast.blended.omr.pages=error
+##log4j.logger.org.uva.itast.blended.omr.align.AbstractAlignMarkDetector=info
+log4j.logger.org.uva.itast.blended.omr.align=info
+##log4j.logger.org.uva.itast.blended.omr.align.LineHoughAlgorithm=error
 log4j.additivity.org.uva.itast.blended.omr.pages=true
