Reduced mark area for scanning to avoid false positives.

--- a/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
+++ b/OpticalMarkRecognition/trunk/src/main/resources/log4j.properties
@@ -12,7 +12,10 @@ log4j.rootLogger=info, stdout
 ##log4j.logger.org.uva.itast.blended.omr.scanners=error
 ##log4j.logger.org.uva.itast.blended.omr.UtilidadesFicheros=error
 ##log4j.logger.org.uva.itast.blended.omr.pages=error
-##log4j.logger.org.uva.itast.blended.omr.align.AbstractAlignMarkDetector=info
+log4j.logger.org.uva.itast.blended.omr.pages.PageImage=error
+log4j.logger.org.uva.itast.blended.omr.scanners.TemplateMarkScanner=debug
+log4j.logger.org.uva.itast.blended.omr.align.AbstractAlignMarkDetector=debug
+log4j.logger.org.uva.itast.blended.omr.align.AlignMarkHoughDetector=debug
 log4j.logger.org.uva.itast.blended.omr.align=info
 ##log4j.logger.org.uva.itast.blended.omr.align.LineHoughAlgorithm=error
 log4j.additivity.org.uva.itast.blended.omr.pages=true
